# kanban

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  kanban_board.db  prompt.md
.claude/: settings.local.json
src/: app.rs  main.rs  ui.rs
src/handlers/: input.rs  mod.rs  storage.rs
src/models/: board.rs  column.rs  mod.rs  task.rs
