[package]
name = "kanban-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.37.0", features = ["chrono", "uuid", "bundled"] }